# kala

./: .buildinfo  pyproject.toml
materi/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
materi/_build/jupyter_execute/: markdown-notebooks.ipynb
